# projtect_template

./: README.md  meson.build
.devcontainer/: Dockerfile  devcontainer.json
tests/: meson.build
